# recaf-mcp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  claude-code-config.json  research-07c-bytecode-search.md  research-aev-static-field-values.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: cache-design.md
docs/plans/: 2026-02-13-recaf-mcp-design.md  2026-02-13-recaf-mcp-implementation.md  2026-02-14-production-ready-design.md  2026-02-14-production-ready-plan.md  2026-02-14-ssvm-runtime-execution-design.md
recaf-mcp-bridge/: pyproject.toml
recaf-mcp-bridge/src/recaf_mcp_bridge/: bridge.py
recaf-mcp-bridge/tests/: test_bridge_metadata_cache.py
recaf-mcp-plugin/: .gitignore  build.gradle  settings.gradle
recaf-mcp-plugin/src/main/java/dev/recafmcp/: RecafMcpPlugin.java
recaf-mcp-plugin/src/main/java/dev/recafmcp/cache/: CacheConfig.java  ClassInventoryCache.java  DecompileCache.java  InstructionAnalysisCache.java  SearchQueryCache.java  WorkspaceRevisionTracker.java
recaf-mcp-plugin/src/main/java/dev/recafmcp/providers/: AbstractToolProvider.java  AssemblerToolProvider.java  AttachToolProvider.java  CallGraphToolProvider.java  CommentToolProvider.java  CompilerToolProvider.java  DecompilerToolProvider.java  GroovyScriptingProvider.java  (+11 more)
recaf-mcp-plugin/src/main/resources/: recaf-api-reference.md
recaf-mcp-plugin/src/test/java/dev/recafmcp/: RecafMcpPluginCodeModeTest.java
scripts/: test-search-instructions.sh  test-toon-e2e.sh
skills/: deep-analysis.md  deobfuscation-workflow.md  jar-triage.md
(+41 files in other folders)
