[project]
name = "recaf-mcp-bridge"
version = "0.1.0"
description = "Stdio-to-HTTP MCP bridge for Recaf MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
]

[project.scripts]
recaf-mcp-bridge = "recaf_mcp_bridge.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
